--- a/support/codeblocks/evds.cbp
+++ b/support/codeblocks/evds.cbp
@@ -6,208 +6,6 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug|x32">
-				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Debug/evds" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-					<Add option="-m32" />
-					<Add option="-DDEBUG" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="Release|x32">
-				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Release/evds" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-m32" />
-					<Add option="-DNDEBUG" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="Debug|x32">
-				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Debug/evds" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-					<Add option="-m32" />
-					<Add option="-DDEBUG" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="Release|x32">
-				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Release/evds" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-m32" />
-					<Add option="-DNDEBUG" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="DebugDynamic|x32">
-				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/DebugDynamic/evds" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="0" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-fPIC" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-shared" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="ReleaseDynamic|x32">
-				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/ReleaseDynamic/evds" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="0" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-fPIC" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-shared" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="DebugSingleThread|x32">
-				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/DebugSingleThread/evds" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="ReleaseSingleThread|x32">
-				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/ReleaseSingleThread/evds" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="DebugSingleThreadDynamic|x32">
-				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/DebugSingleThreadDynamic/evds" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="0" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-fPIC" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-shared" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="ReleaseSingleThreadDynamic|x32">
-				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/ReleaseSingleThreadDynamic/evds" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="0" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-fPIC" />
-					<Add option="-DEVDS_LIBRARY" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/evds/include" />
-					<Add directory="../../external/evds/external/simc/include" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-shared" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
 			<Target title="Debug|x64">
 				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x64/Debug/evds" />
@@ -306,6 +104,8 @@
 					<Add option="-shared" />
 					<Add option="-m64" />
 					<Add option="-L/usr/lib64" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseDynamic|x64">
@@ -328,6 +128,8 @@
 					<Add option="-shared" />
 					<Add option="-m64" />
 					<Add option="-L/usr/lib64" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThread|x64">
@@ -386,6 +188,8 @@
 					<Add option="-shared" />
 					<Add option="-m64" />
 					<Add option="-L/usr/lib64" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThreadDynamic|x64">
@@ -408,6 +212,218 @@
 					<Add option="-shared" />
 					<Add option="-m64" />
 					<Add option="-L/usr/lib64" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
+				</Linker>
+			</Target>
+			<Target title="Debug|x32">
+				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Debug/evds" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-DDEBUG" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="Release|x32">
+				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Release/evds" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-m32" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="Debug|x32">
+				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Debug/evds" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-DDEBUG" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="Release|x32">
+				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Release/evds" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-m32" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="DebugDynamic|x32">
+				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/DebugDynamic/evds" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="0" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-fPIC" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-shared" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseDynamic|x32">
+				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/ReleaseDynamic/evds" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="0" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-fPIC" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-shared" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
+				</Linker>
+			</Target>
+			<Target title="DebugSingleThread|x32">
+				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/DebugSingleThread/evds" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseSingleThread|x32">
+				<Option output="../../bin/libevds.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/ReleaseSingleThread/evds" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="DebugSingleThreadDynamic|x32">
+				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/DebugSingleThreadDynamic/evds" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="0" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-fPIC" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-shared" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseSingleThreadDynamic|x32">
+				<Option output="../../bin/libevds.so" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/ReleaseSingleThreadDynamic/evds" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="0" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-fPIC" />
+					<Add option="-DEVDS_LIBRARY" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/evds/include" />
+					<Add directory="../../external/evds/external/simc/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-shared" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+					<Add directory="../../bin" />
+					<Add library="simc" />
 				</Linker>
 			</Target>
 		</Build>
