--- a/support/codeblocks/simc.cbp
+++ b/support/codeblocks/simc.cbp
@@ -6,182 +6,6 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Debug/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-					<Add option="-m32" />
-					<Add option="-DDEBUG" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="Release|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Release/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-m32" />
-					<Add option="-DNDEBUG" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="Debug|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Debug/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-					<Add option="-m32" />
-					<Add option="-DDEBUG" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="Release|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/Release/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-m32" />
-					<Add option="-DNDEBUG" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="DebugDynamic|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/DebugDynamic/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="ReleaseDynamic|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/ReleaseDynamic/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="DebugSingleThread|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/DebugSingleThread/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="ReleaseSingleThread|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/ReleaseSingleThread/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="DebugSingleThreadDynamic|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/DebugSingleThreadDynamic/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
-			<Target title="ReleaseSingleThreadDynamic|x32">
-				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
-				<Option object_output="obj/x32/ReleaseSingleThreadDynamic/simc" />
-				<Option type="2" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-m32" />
-					<Add option="-DSIMC_LIBRARY" />
-					<Add directory="../../external/simc/include" />
-					<Add directory="../../external/simc/external/tinyxml" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-m32" />
-					<Add option="-L/usr/lib32" />
-				</Linker>
-			</Target>
 			<Target title="Debug|x64">
 				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x64/Debug/simc" />
@@ -358,12 +182,192 @@
 					<Add option="-L/usr/lib64" />
 				</Linker>
 			</Target>
+			<Target title="Debug|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Debug/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-DDEBUG" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="Release|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Release/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-m32" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="Debug|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Debug/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-DDEBUG" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="Release|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/Release/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-m32" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="DebugDynamic|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/DebugDynamic/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseDynamic|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/ReleaseDynamic/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="DebugSingleThread|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/DebugSingleThread/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseSingleThread|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/ReleaseSingleThread/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="DebugSingleThreadDynamic|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/DebugSingleThreadDynamic/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseSingleThreadDynamic|x32">
+				<Option output="../../bin/libsimc.a" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/x32/ReleaseSingleThreadDynamic/simc" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-m32" />
+					<Add option="-DSIMC_LIBRARY" />
+					<Add directory="../../external/simc/include" />
+					<Add directory="../../external/simc/external/tinyxml" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-m32" />
+					<Add option="-L/usr/lib32" />
+				</Linker>
+			</Target>
 		</Build>
 		<Unit filename="../../external/simc/source/sim_queue.c">
 			<Option virtualFolder="external/simc/source" />
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../../external/simc/source/sim_threading.c">
+			<Option virtualFolder="external/simc/source" />
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../external/simc/source/sim_sarray.c">
 			<Option virtualFolder="external/simc/source" />
 			<Option compilerVar="CC" />
 		</Unit>
