Added driver selection, more init code for Ogre

--- a/support/codeblocks/EVE.cbp
+++ b/support/codeblocks/EVE.cbp
@@ -28,6 +28,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Release|x64">
@@ -53,6 +54,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x64">
@@ -77,6 +79,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Release|x64">
@@ -102,6 +105,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="DebugDynamic|x64">
@@ -130,6 +134,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseDynamic|x64">
@@ -158,6 +163,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThread|x64">
@@ -186,6 +192,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThread|x64">
@@ -214,6 +221,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThreadDynamic|x64">
@@ -246,6 +254,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThreadDynamic|x64">
@@ -278,6 +287,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x32">
@@ -302,6 +312,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Release|x32">
@@ -327,6 +338,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Debug|x32">
@@ -351,6 +363,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="Release|x32">
@@ -376,6 +389,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="DebugDynamic|x32">
@@ -404,6 +418,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseDynamic|x32">
@@ -432,6 +447,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThread|x32">
@@ -460,6 +476,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThread|x32">
@@ -488,6 +505,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="DebugSingleThreadDynamic|x32">
@@ -520,6 +538,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 			<Target title="ReleaseSingleThreadDynamic|x32">
@@ -552,6 +571,7 @@
 					<Add library="m" />
 					<Add library="pthread" />
 					<Add library="OgreMain" />
+					<Add library="OIS" />
 				</Linker>
 			</Target>
 		</Build>
